--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="hu.zhuren.shuai">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="hu.zhuren.shuai.core">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
