--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile project(':core')
     compile project(':ui')
+    compile project(':db')
 }
